--- a/templates/index.html
+++ b/templates/index.html
@@ -12,44 +12,56 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <style>
-        .form-row{
-            display: flex;
-            margin-top: 50px;
-            margin-left: 38%;
+
+        form{
+            background-color: rgb(192, 222, 237);
+            text-align: center;
         }
-        .btn-primary{
-            margin-left: 10px;
+        .btn-primary {
+            background-color: rgb(0, 132, 180);
         }
-        .btn-danger{
-            margin-left:10px;
+
+        .btn-danger {
+
+            background-color: rgb(0, 172, 237);
+        }
+
+        body {
+            background-color: rgb(192, 222, 237);
+
+        }
+        .container{
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h1 style = "text-align: center">Twitter word counter</h1>
+    <div class=" container">
+        <h1>Twitter word counter</h1>
+        <div class="container">
+            <form  action="/GetData/" method="post"> {% csrf_token %}
+                <div class="form-row">
+                   <div class="form-group">
+                       <label  for="id_username">Username</label>
+                       <input type="text" class="form-control" name="username" id="id_username" placeholder="Enter a valid twitter username"
+                                   required="required">
+                   </div>
 
-        <form action="/GetData/" method="post"> {% csrf_token %}
-            <div class="form-row align-items-center">
-                <div class="col-auto">
-                    <label class="sr-only" for="inlineFormInputGroup">Username</label>
-                    <div class="input-group mb-2" style="display: inline">
-                        <input type="text" class="form-control" name = "username" id = "id_username" placeholder="Username" required="required">
-                    </div>
                 </div>
-                <div class="col-auto">
-                    <input type="submit" class="btn btn-primary mb-2" value = "Execute">
+                <div class="form-row">
+                    <input type="submit" class="btn btn-primary mb-2" value="Execute">
+                    <input type="submit" class="btn btn-danger mb-2" formaction="/DeleteData/" value="Reset">
                 </div>
-            </div>
-        </form>
-        <form style ="margin-left: 50%;" action="/DeleteData/" method="post"> {% csrf_token %}
-            <input type="submit" class="btn btn-danger mb-2" value="Reset">
-        </form>
+            </form>
 
-    {% for elemento in word_list %}
-        <h3>{{ elemento.username}}</h3>
-        <ul id="id_list">
-            <li> {{ elemento.content }} </li>
+        <h3>{{ word_list.username }}</h3>
+        <ul class="list-group list-group-flush" id="id_list">
+           {% for elem in word_list %}
+                <li class="list-group-item"> {{ elem.content }} </li>
+               <li class="list-group-item"> {{ elem.counter }} </li>
+           {% endfor %}
         </ul>
-    {% endfor %}
+        </div>
+    </div>
 </body>
 </html>
