--- a/templates/index.html
+++ b/templates/index.html
@@ -21,17 +21,15 @@
             background-color: rgb(0, 132, 180);
         }
 
-        .btn-danger {
-
-            background-color: rgb(0, 172, 237);
-        }
-
         body {
             background-color: rgb(192, 222, 237);
 
         }
         .container{
             text-align: center;
+        }
+        input{
+            border-color: #ff9800;
         }
     </style>
 </head>
@@ -43,24 +41,23 @@
                 <div class="form-row">
                    <div class="form-group">
                        <label  for="id_username">Username</label>
-                       <input type="text" class="form-control" name="username" id="id_username" placeholder="Enter a valid twitter username"
-                                   required="required">
+                       <input type="text" class="form-control" name="username" id="id_username" placeholder="Enter a valid twitter username">
                    </div>
 
                 </div>
                 <div class="form-row">
                     <input type="submit" class="btn btn-primary mb-2" value="Execute">
-                    <input type="submit" class="btn btn-danger mb-2" formaction="/DeleteData/" value="Reset">
+                    <input type="submit" class="btn btn-primary mb-2" formaction="/DeleteData/" value="Reset">
                 </div>
             </form>
 
-        <h3>{{ word_list.username }}</h3>
+            {% for elem in word_list %}
+        <h3>{{ elem.username }}</h3>
         <ul class="list-group list-group-flush" id="id_list">
-           {% for elem in word_list %}
+
                 <li class="list-group-item"> {{ elem.content }} </li>
-               <li class="list-group-item"> {{ elem.counter }} </li>
-           {% endfor %}
         </ul>
+              {% endfor %}
         </div>
     </div>
 </body>
